Fix layer z-index

--- a/src/App.css
+++ b/src/App.css
@@ -84,6 +84,7 @@
 
   &__show-saving-spinner {
     position: absolute;
+    z-index: 10;
     background-color: red;
     opacity: 0.7;
     height: 100%;
@@ -104,7 +105,6 @@
 
     ul {
       position: absolute;
-      z-index: -1;
       height: inherit;
       width: 100%;
 
